img-small class added to site.css

--- a/Komis/wwwroot/content/site.css
+++ b/Komis/wwwroot/content/site.css
@@ -8,3 +8,13 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.img-small {
+    position: relative;
+    float: left;
+    width: 100px;
+    height: 100px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
