--- a/Komis/Views/Home/Index.cshtml
+++ b/Komis/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 {
     <div class="col-sm-4 col-lg-4 col-md-4" >
         <div class="img-thumbnail">
-            <img src="@car.MiniImageUrl" alt="" />
+            <img class="img-small" src="@car.MiniImageUrl" alt="" />
             <div class="figure-caption">
                 <h3 class="pull-right">@car.Price.ToString("c")</h3>
                 <h3>
