--- a/Komis/Views/Home/Index.cshtml
+++ b/Komis/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Komis.ViewModels.HomeViewModel
+﻿@model HomeViewModel
 @*Okreslamy typ widoku - strona razor zaczyna dziedziczyc z Car.cs*@
 
 <h2>@Model.Title</h2>
@@ -11,7 +11,7 @@
             <div class="figure-caption">
                 <h3 class="pull-right">@car.Price.ToString("c")</h3>
                 <h3>
-                    @car.Mark - @car.Model - @car.ProductionDate
+                    <a asp-controller="Home" asp-action="Details" asp-route-id="@car.CarId">@car.Mark</a> - @car.Model - @car.ProductionDate
                 </h3>
                 <h4>
                     Przebieg : @car.Mileage
