Tag helpers bug fixed

--- a/Komis/Views/_ViewImports.cshtml
+++ b/Komis/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Komis.ViewModels
 @using Komis.Models
-@addTagHelper *, Microsoft.Aspnetcore.Mvc.Taghelpers
-<!-- Mowimy MVC by zaimportowal wszystkie tag helpers do asp.netcore.mvc.taghelpers.assembly    -->
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@*Mowimy MVC by zaimportowal wszystkie tag helpers do asp.netcore.mvc.taghelpers.assembly*@
