--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark navbar-fixed-top">
+    <nav class="navbar navbar-dark">
         <div class="container">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
