--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="container">
-            <div class="navbar-collapse collapse">
+            <div class="navbar navbar-collapse topnav">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
                 </ul>
