--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -14,9 +14,10 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
-            <div class="navbar navbar-collapse topnav">
+            <div class="navbar navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
+                    <li><a asp-controller="Opinion" asp-action="Index">Feedback</a></li>
                 </ul>
             </div>
         </div>
