--- a/Komis/Views/Opinion/Index.cshtml
+++ b/Komis/Views/Opinion/Index.cshtml
@@ -2,35 +2,41 @@
 
 <form asp-action="Index" method="post" role="form">
 
+    <div asp-validation-summary="All" class="text-danger"></div> @*Kazdy blad zostanie wyswietlony w tym divie w nowej linii*@
+
+
     <div class="form-group row">
-        <label asp-for="UserName" class="col-md-2 col-form-label"></label>
+        <label asp-for="UserName" class="col-md-6 col-form-label label-dark-rounded"></label>
         <div class="col-md-5">
             <input asp-for="UserName" class="form-control" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
         </div>
     </div>
 
     <div class="form-group row">
-        <label asp-for="Email" class="col-md-2 col-form-label"></label>
+        <label asp-for="Email" class="col-md-6 col-form-label label-dark-rounded"></label>
         <div class="col-md-5">
             <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
 
     <div class="form-group row">
-        <label asp-for="Message" class="col-md-2 col-form-label"></label>
+        <label asp-for="Message" class="col-md-6 col-form-label label-dark-rounded"></label>
         <div class="col-md-5">
             <textarea asp-for="Message" class="form-control"></textarea>
+            <span asp-validation-for="Message" class="text-danger"></span>
         </div>
     </div>
 
     <div class="form-group row">
-        <label asp-for="WaitingForResponse" class="col-md-2"></label>
+        <label asp-for="WaitingForResponse" class="col-md-6 col-form-label label-dark-rounded"></label>
         <div class="col-md-5">
-            <input type="checkbox" asp-for="WaitingForResponse" class="form-control" />
+            <input type="checkbox" asp-for="WaitingForResponse" class="form-check-input" />
         </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group row">
         <div class="col-md-5">
             <input type="submit" class="btn btn-dark" value="Send feedback!" />
         </div>
