--- a/Komis/Views/Account/Register.cshtml
+++ b/Komis/Views/Account/Register.cshtml
@@ -1,8 +1,8 @@
 ﻿@model LoginViewModel
 
-<h4><a asp-action="Register" asp-controller="Account"></a></h4>
+<h2>Before you contact us, sign up or <a asp-action="Login" asp-controller="Account">login</a> to your account.</h2>
 
-<form asp-action="Login" asp-controller="Account" method="post" role="form">
+<form asp-action="Register" method="post" role="form">
 
     <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -24,7 +24,7 @@
 
     <div class="form-group row">
         <div class="col-sm-8 col-md-8 col-lg-8">
-            <input type="submit" class="btn btn-primary" value="Login" />
+            <input type="submit" class="btn btn-primary" value="Register" />
         </div>
     </div>
 
