--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -17,7 +17,10 @@
             <div class="navbar navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
+                    <li><a id="login-link" asp-controller="Account" asp-action="Login">Login</a></li>
+                    <li><a id="register-link" asp-controller="Account" asp-action="Register">Register</a></li>
                     <li><a asp-controller="Opinion" asp-action="Index">Feedback</a></li>
+
                 </ul>
             </div>
         </div>
