--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+
+<!DOCTYPE html>
+@inject SignInManager<IdentityUser> _signInManager 
+@*wstrzykniecie zaleznosci, umozliwiajace zweryfikowanie czy dany uzytkownik jest zalogowany*@
 
 <html>
 <head>
@@ -12,17 +16,31 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <div class="navbar navbar-collapse">
-                <ul class="nav navbar-nav">
+                <ul class="navbar-nav mr-auto">
                     <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
-                    <li><a id="login-link" asp-controller="Account" asp-action="Login">Login</a></li>
-                    <li><a id="register-link" asp-controller="Account" asp-action="Register">Register</a></li>
-                    <li><a asp-controller="Opinion" asp-action="Index">Feedback</a></li>
-
+                    <li class="nav-item"><a class="nav-link" asp-controller="Opinion" asp-action="Index">Feedback</a></li>
                 </ul>
-            </div>
+
+                @if (_signInManager.IsSignedIn(User))
+                {
+                    <form asp-area="" asp-controller="Account" asp-action="Logout" class="form-inline my-2 my-lg-0" id="logoutForm" method="post">
+                        <ul class="navbar-nav mr-auto" >
+                            <li><a href="javascript:document.getElementById('logoutForm').submit()">Logout</a></li>
+                        </ul>
+                    </form>
+                }
+                else
+                {
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><a id="login-link" class="nav-link" asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li class="nav-item"><a id="register-link" class="nav-link" asp-controller="Account" asp-action="Register">Register</a></li>
+                    </ul>
+                }
+
+                </div>
         </div>
     </nav>
 
