--- a/Komis/Views/Account/Register.cshtml
+++ b/Komis/Views/Account/Register.cshtml
@@ -1,31 +1,36 @@
 ﻿@model LoginViewModel
 
-<h2>Before you contact us, sign up or <a asp-action="Login" asp-controller="Account">login</a> to your account.</h2>
-
-<form asp-action="Register" method="post" role="form">
+<form asp-action="Register" method="post" role="form" class="form-horizontal">
 
     <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="form-group row">
-        <label asp-for="UserName" class="col-sm-4 col-md-4 col-lg-4 col-form-label">Username</label>
-        <div class="col-sm-8 col-md-8 col-lg-8">
+    <div class="form-group">
+        <h4 class="col-md-offset-2 col-md-10" >
+            Before you contact us, sign up or
+            <a asp-action="Login" asp-controller="Account">login</a>
+            to your account.
+        </h4>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="UserName" class="col-md-2 control-label">Username</label>
+        <div class="col-md-10">
             <input asp-for="UserName" class="form-control" placeholder="Username" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
+            <span asp-validation-for="UserName" class="col-md-offset-2 text-danger"></span>
         </div>
     </div>
 
-    <div class="form-group row">
-        <label asp-for="Password" class="col-sm-4 col-md-4 col-lg-4 col-form-label">Password</label>
-        <div class="col-sm-8 col-md-8 col-lg-8">
+    <div class="form-group">
+        <label asp-for="Password" class="col-md-2 control-label">Password</label>
+        <div class="col-md-10">
             <input asp-for="Password" class="form-control" placeholder="Password" />
-            <span asp-validation-for="Password" class="text-danger"></span>
+            <span asp-validation-for="Password" class="col-md-offset-2 text-danger"></span>
         </div>
     </div>
 
-    <div class="form-group row">
-        <div class="col-sm-8 col-md-8 col-lg-8">
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-primary" value="Register" />
         </div>
     </div>
-
 </form>
