--- a/Komis/Views/Home/Details.cshtml
+++ b/Komis/Views/Home/Details.cshtml
@@ -2,10 +2,10 @@
 
 <h2> @Model.Mark - @Model.Model</h2>
 
-<div class="img-thumbnail">
+<div class="thumbnail">
     <img alt="@Model.Mark" src="@Model.ImageUrl"/>
-    <div class="figure-caption">
-        <h3 class="float-right">@Model.Price</h3>
+    <div class="caption">
+        <h3 class="pull-right">@Model.Price</h3>
         <h3>@Model.ProductionDate</h3>
         <h3>@Model.Mileage</h3>
         <h3>@Model.EngineCapacity</h3>
