--- a/Komis/Views/Home/Index.cshtml
+++ b/Komis/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model HomeViewModel
 
-<div class="container padding-top-bottom"><h2>@Model.Title</h2></div>
+<h2>@Model.Title</h2>
 
 @foreach (var car in Model.CarList)
 {
-        <div class="col-sm-4 col-md-4 col-lg-4 padding-top-bottom">
-            <div class="img-thumbnail" id="div-dark">
+        <div class="col-sm-4 col-lg-4 col-md-4">
+            <div class="thumbnail" id="div-dark">
                 <img class="img-small" src="@car.MiniImageUrl" alt="" />
-                <div class="figure-caption">
+                <div class="caption">
                     <h3 class="pull-right">@car.Price.ToString("c")</h3>
                     <h3>
                         <a asp-controller="Home" asp-action="Details" asp-route-id="@car.CarId">@car.Mark</a> - @car.Model - @car.ProductionDate
