Create car method defined; Create view implemented; Db migration conducted;

--- a/Komis/Views/Opinion/Index.cshtml
+++ b/Komis/Views/Opinion/Index.cshtml
@@ -2,7 +2,7 @@
 
 <form asp-action="Index" class="form-horizontal" method="post" role="form">
 
-    <div asp-validation-summary="All" class="text-danger"></div> @*Kazdy blad zostanie wyswietlony w tym divie w nowej linii*@
+    <div asp-validation-summary="All" class="text-danger"></div>
 
 
     <div class="form-group row">
