--- a/Komis/Views/Car/Edit.cshtml
+++ b/Komis/Views/Car/Edit.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Car
 
-<h2>Please, fulfill car data.</h2>
+<h2>Edit car data.</h2>
 <hr />
-<form asp-action="Create" class="form-horizontal" method="post" role="form">
+<form asp-action="Edit" class="form-horizontal">
 
-    <div asp-validation-summary="All" class="text-danger"></div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="CarId" />
 
     <div class="form-group row">
         <label asp-for="Mark" class="col-md-2 control-label"></label>
@@ -70,22 +71,6 @@
         </div>
     </div>
 
-    @*<div class="form-group row">
-        <label asp-for="ImageUrl" class="col-md-2 control-label"></label>
-        <div class="col-md-5">
-            <input asp-for="ImageUrl" class="form-control" />
-            <span asp-validation-for="ImageUrl" class="text-danger"></span>
-        </div>
-    </div>*@
-
-    @*<div class="form-group row">
-        <label asp-for="MiniImageUrl" class="col-md-2 control-label"></label>
-        <div class="col-md-5">
-            <input asp-for="MiniImageUrl" class="form-control" />
-            <span asp-validation-for="MiniImageUrl" class="text-danger"></span>
-        </div>
-    </div>*@
-
     <div class="form-group row">
         <label asp-for="CarDescription" class="col-md-2 control-label"></label>
         <div class="col-md-5">
@@ -110,7 +95,8 @@
 
     <div class="form-group row">
         <div class="col-md-offset-2 col-md-5">
-            <input type="submit" class="btn btn-dark" value="Add car" />
+            <input type="submit" class="btn btn-dark" value="Save changes" />
+            <a asp-action="Index" class="btn btn-danger pull-right">Back</a>
         </div>
     </div>
 
