CRUD fully implemented;

--- a/Komis/Views/Car/Delete.cshtml
+++ b/Komis/Views/Car/Delete.cshtml
@@ -18,6 +18,7 @@
                 <div class="pull-right">
                     <form asp-action="Delete">
                         <input type="hidden" asp-for="CarId" />
+                        <input type="hidden" asp-for="MiniImageUrl" />
                         <input type="submit" value="Delete" class="btn btn-danger" />
                         <a asp-action="Index" class="btn btn-success">Back</a>
                     </form>
