--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
                     <li><a class="nav-link" asp-controller="Opinion" asp-action="Index">Feedback</a></li>
+                    <li><a class="nav-link" asp-controller="Car" asp-action="Index">Car list</a></li>
                 </ul>
 
                 @if (_signInManager.IsSignedIn(User))
