--- a/Komis/Views/Shared/_Layout.cshtml
+++ b/Komis/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="navbar navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-controller="Home" asp-action="Index" class="navbar-brand">Komis</a></li>
+                    <li><a class="navbar-brand" asp-controller="Home" asp-action="Index">Komis</a></li>
                     <li><a class="nav-link" asp-controller="Opinion" asp-action="Index">Feedback</a></li>
                     <li><a class="nav-link" asp-controller="Car" asp-action="Index">Car list</a></li>
                 </ul>
